Edited wiki page ModelIntervHuman through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1630 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelIntervHuman.wiki
+++ b/wiki/ModelIntervHuman.wiki
@@ -35,7 +35,7 @@ Vaccines need to be configured per-scenario with one or more `vaccineDescription
   <initialEfficacy value="0.8"/>
 </vaccineDescription>
 }}}
-Each vaccine type described is administered. The `decay` element has type `DecayFunction` ([ModelDecayFunction#Configuration configuration]). One or more `initialEfficacy` elements can be given specifying the efficacy of each subsequent dose of the vaccine administered (at the time of administration). If further doses are given, the last listed `initialEfficacy` is repeated.
+Each vaccine type described is administered. The `decay` element has type `DecayFunction` ([ModelDecayFunctions#Configuration configuration]). One or more `initialEfficacy` elements can be given specifying the efficacy of each subsequent dose of the vaccine administered (at the time of administration). If further doses are given, the last listed `initialEfficacy` is repeated.
 
 Use standard [ModelInterventions#Continuous_descriptions continuous] description with name `vaccine` and [ModelInterventions#Timed_descriptions mass deployment] description with name `vaccinate`, although the interaction of the two deployment methods is not quite the same as with other continuously deployed interventions: if a dose has been received via mass deployment, it will not also be received via continuous deployment, and if a continuous dose is missed but later caught-up with through mass deployment, further continuous doses may also be received (continuous administration only treats individuals who have received all doses they should have through continuous programs).
 
