Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1632 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -36,6 +36,7 @@
       * [ModelIntervHuman Human-stage]
       * [ModelIntervVector Mosquito-stage]
       * [ModelIntervMisc Special interventions]
+      * [ModelDecayFunctions Decays for interventions]
   * *Code development*
     * [Code#Source_code Source code]
       * [Code#Doxygen_documentation doxygen-generated documentation]
