Edited wiki page ModelDecayFunctions through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1633 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelDecayFunctions.wiki
+++ b/wiki/ModelDecayFunctions.wiki
@@ -7,13 +7,13 @@ decays over time (at the population and possibly the individual level). To allow
 use of different decay functions, a generalized method of describing decay was
 added into schema version 25. The following set of functions are available:
 
-|| xml name || formula || ||
-|| constant || 1 || no decay ||
-|| linear || 1 - t/L || for t less than L, otherwise 0 ||
-|| exponential || exp( - t/L * log(2) ) || ||
-|| weibull || exp( -(t/L)^k * log(2) ) || equivalent to exponential when k = 1 ||
-|| hill || 1 / (1 + (t/L)^k) || ||
-|| chitnis || exp( k - k / (1 - (t/L)^2) ) || for t less than L, otherwise 0 ||
+|| xml name    || formula || ||
+|| constant    || `1` || no decay ||
+|| linear      || `1 - t/L` || for `t < L`, otherwise 0 ||
+|| exponential || `exp( - t/L * log(2) )` || ||
+|| weibull     || `exp( -(t/L)^k * log(2) )` || equivalent to exponential when `k = 1` ||
+|| hill        || `1 / (1 + (t/L)^k)` || ||
+|| chitnis     || `exp( k - k / (1 - (t/L)^2) )` || for `t < L`, otherwise 0 ||
 
 where L is some description of the time-scale (dimension time) and k is a shape
 parameter (no dimension).
