--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -127,8 +127,8 @@ The `drugDescription` element is only required when a 1-day time-step is used, a
 == Transmission model ==
 
 [ScenarioTransmission Transmission model configuration.] Two transmission models are available, independent of the length of the time-step ([ModelTransmission descriptions]):
-  * direct input of transmission intensity with (optional) response to human infectiousness
-  * model of the transmission vector (_anopheles_ mosquito)'s feeding cycle; allows modelling of vector stage interventions
+  * a simple model (allows response to human infectiousness and using a forced infection rate from mosquitoes)
+  * a more detailed model of vector transmission; allows modelling of vector stage interventions
 
 == Demography ==
 
