Edited wiki page ModelIntervHuman through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1662 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelIntervHuman.wiki
+++ b/wiki/ModelIntervHuman.wiki
@@ -46,7 +46,7 @@ The MDA intervention models some type of mass deployment of drugs. In the 5-day 
 
 With the 5-day time-step model no additional configuration is needed. With the 1-day TS model, an MDADescription element must be included, as, for example, below:
 {{{
-<interventions name="cohort selection">
+<interventions name="...">
   <descriptions>
     <MDADescription>
       <decisions>
