Edited wiki page ScenarioHealthSystem through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1664 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ScenarioHealthSystem.wiki
+++ b/wiki/ScenarioHealthSystem.wiki
@@ -296,7 +296,7 @@ Two categories of NMF are considered: bacterial/viral infections which are self-
 Incidence of NMF and the probability that the NMF requires treatment are described within the [ScenarioDesign#Model "model" element]:
 {{{
 <model>
-  <clinical>
+  <clinical healthSystemMemory="14">
     <NonMalariaFevers>
 <!-- rate of incidence of clinical fever per person per year by age -->
       <incidence>
